@@ -1,6 +1,9 @@
 -------------------------------------------------------------------------------
 Changes in version 1.21
 
+- Added a fake listing routine to twoftpd-drop, to avoid errors on GUI
+  clients that require LIST or NLST.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
